# Micro-XRCE-DDS-Agent

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.px4  CTestConfig.cmake  DEFAULT_FASTRTPS_PROFILES.xml  Dockerfile  FASTDDS3_TODO  PoC_SendReceive.c  PoC_SendReceive.cxx  README.md  agent.refs  agent_parser_test.cpp  agent_test.cpp  client_test.c  colcon.pkg  eprosima_libraries.cmake  gtest.cmake  micrortps_agent.cpp  microxrce_agent.cpp  shape_subs_test.cpp  udpserver.cpp  udpserver.h
.github/ISSUE_TEMPLATE/: general-issue.md
.github/workflows/: cmake.yml
agent/include/: MessageHeader.h  ObjectVariant.h  Payloads.h  Serializer.h  StatusPayload.h  SubMessageHeader.h  XRCEFactory.h  XRCEParser.h  api.h
agent/include/agent/: Common.h  DDSXRCETypes.cxx  DDSXRCETypes.h  MessageHeader.h  ObjectVariant.h  Payloads.h  Root.h  Serializer.h  SubMessageHeader.h  XRCEFactory.h  XRCEParser.h  root.h
agent/src/: DDS_XRCE.cxx  MessageHeader.cxx  ObjectVariant.cxx  Payloads.cxx  Serializer.cxx  StatusPayload.cxx  SubMessageHeader.cxx  XRCEFactory.cxx  XRCEParser.cxx  XRCETests.cxx  api.cxx
agent/src/cpp/: MessageHeader.cpp  MessageQueue.cpp  MessageQueue.h  ObjectVariant.cpp  ObjectVariant.cxx  Payloads.cpp  Payloads.cxx  Root.cpp  Serializer.cpp  Serializer.cxx  SubMessageHeader.cpp  SubMessageHeader.cxx  XRCEFactory.cpp  XRCEParser.cpp  XRCEParser.cxx  root.cxx
ci/linux/: CMakeLists.txt
ci/windows/: CMakeLists.txt
client/: CMakeLists.txt.px4  build_and_run.sh  makefile
client/include/: message.h  mini_cdr.h  serialization.h  xrce_spec.h
client/include/client/: message.h  serialization.h  xrce_spec.h
client/man/: file_inheritance.nomnoml  xrce_protocol.nomnoml
client/src/: message.c  mini_cdr.c  serialization.c
client/test/: message_test.c  mini_cdr_test.c  mini_micro_cdr_performance_comparative_test.c
client/test/prototype/: shape_topic.c  shape_topic.h
cmake/: Soversion.cmake  SuperBuild.cmake
cmake/common/: check_configuration.cmake  eprosima_libraries.cmake
cmake/dev/: eprosima_libraries.cmake  gtest.cmake  set_sources.cmake
cmake/modules/: FindAsio.cmake
cmake/packaging/: Config.cmake.in  eProsimaPackaging.cmake
cmake/packaging/windows/: InstallRedistributables.nsh  InstallRedistributables.nsh.in  NSIS.template.in  NSISPackaging.cmake.in  WindowsPackaging.cmake.in
examples/custom_agent/: CMakeLists.txt  custom_agent.cpp
fastcdr/: 0001-use-stdlib-for-VxWorks.patch
fastrtps/: 0001-comment-CMAKE_SHARED_LINKER_FLAGS.patch  0002-undef-NONE.patch  0003-remove-CMAKE_DL_LIBS.patch  0004-set-munmap-to-0.patch  0005-skip-find-package-THREADS.patch  0006-skip-find-package_OpenSSL.patch  0007-undef-NONE.patch
idl/: DDSXRCETypes.idl  MessageHeader.idl  ObjectVariant.idl  Payloads.idl  ResourceData.idl  SubMessageHeader.idl  Types.idl  TypesMod.idl
include/agent/: MessageHeader.h  MessageQueue.h  Optional.h  Payloads.h  Root.h  Serializer.h  XRCEFactory.h  XRCEObject.h  XRCEObject.hpp  XRCEParser.h  XRCETypes.h
include/agent/client/: ProxyClient.h  StreamsManager.h  XRCEStreams.h
include/agent/datareader/: DataReader.h  TokenBucket.h
include/agent/datawriter/: DataWriter.h
include/agent/participant/: Participant.h
include/agent/publisher/: Publisher.h
include/agent/subscriber/: Subscriber.h
include/agent/topic/: Topic.hpp
include/agent/transport/: SerialLayer.h  TCPServer.hpp  UARTServer.hpp  UDPServer.hpp  XRCEServer.hpp
include/agent/types/: ShapePubSubTypes.h  TopicPubSubType.h
shape_pubsub/: CMakeLists.txt  Shape.cxx  ShapePubSubMain.cxx  ShapePubSubTypes.cxx  ShapePubSubTypes.h  ShapePublisher.cxx  ShapePublisher.h  ShapeSubscriber.cxx  ShapeSubscriber.h  makefile_x64Linux2.6gcc
snap/: snapcraft.yaml
snap/hooks/: configure  install
snap/local/: MicroXRCEAgent-daemon  snap-runner
spdlog/: 0001-spdlog.patch
src/cpp/: Agent.cpp  AgentInstance.cpp  DDSXRCETypes.cxx  DDSXRCETypes.h  MessageHeader.cxx  MessageHeader.h  MessageQueue.cpp  MessageQueue.h  Optional.h  Payloads.cxx  Payloads.h  Root.cpp  Serializer.cpp  SubMessageHeader.cpp  SubMessageHeader.cxx  SubMessageHeader.h  Types.cpp  Types.h  XRCEFactory.cpp  XRCEObject.cpp  XRCEParser.cpp  XRCETypes.cpp  XRCETypes.h
test/: AgentTests.cpp  CMakeLists.txt  Common.cpp  Common.h  DEFAULT_FASTRTPS_PROFILES.xml  DataReaderTests.cpp  DataReaderTests.h  UtilsTests.cpp  XRCETests.cpp  XRCETests.cxx  agent.refs
test/blackbox/tree/: CMakeLists.txt  TreeTests.cpp
test/case/: CMakeLists.txt
test/case/installation/: InstallationTest.cmake
test/case/packaging/: CMakeLists.txt  Packaging.cmake  main.cpp
test/cmake/: CMakeLists.txt  main.cpp
test/integration/: AgenIntegrationTests.cpp
test/integration/cross_serialization/: AgentSerialization.cpp  AgentSerialization.hpp  CMakeLists.txt
test/integration/interaction/: AgentInteraction.cpp  AgentInteraction.hpp  CMakeLists.txt
test/integration/xrce_serialization/: AgentSerialization.cpp  AgentSerialization.hpp  CMakeLists.txt  agent_serialization.cpp  agent_serialization.hpp
test/mock/Middleware/uxr/agent/middleware/: Middleware.hpp
test/mock/Middleware/uxr/agent/middleware/fast/: FastMiddleware.hpp
test/mock/ProxyClient/micrortps/agent/client/: ProxyClient.hpp
test/mock/ProxyClient/uxr/agent/client/: ProxyClient.hpp
test/unittest/: CMakeLists.txt  Common.cpp  Common.h  RootTests.cpp
test/unittest/agent/: AgentUnitTests.cpp  CMakeLists.txt
test/unittest/client/session/stream/: CMakeLists.txt  InputStreamTest.cpp  OutputStreamTest.cpp  OutputStreamUnitTests.cpp
test/unittest/middleware/ced/: CMakeLists.txt  CedMiddlewareTests.cpp
test/unittest/root/: CMakeLists.txt  DataReaderTests.cpp  DataReaderTests.h  RootUnitTests.cpp
test/unittest/transport/serial/: BaudRateTableTests.cpp  CMakeLists.txt
test/unittest/types/: CMakeLists.txt  XRCETests.cpp
test/unittest/util/: CMakeLists.txt  UtilsTests.cpp
test/unittest/utils/: CMakeLists.txt  SeqNumUnitTests.cpp  TokenBucketTest.cpp
test/unittest/xrce/: CMakeLists.txt  XRCETests.cpp
transport/: ddsxrce_transport.c
(+327 files in other folders)
